--- a/src/component/Body/body.module.css
+++ b/src/component/Body/body.module.css
@@ -13,9 +13,12 @@
     background: #F8F9FA;
     padding: 32px 40px;
     max-width: 1024px;
+    display: flex;
 }
 
 .container .wrapper .cardWrapper .card {
     background: #ffffff;
     box-shadow: #00000024 0px 2px 14px 0px;
+    flex: var(--flex);
+    margin: 0 12px;
 }
