--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
+
 @font-face {
   font-family: 'Roboto';
   src: url('./assets/fonts/Roboto-Regular.ttf') format('truetype');
@@ -12,6 +17,13 @@ body {
 @font-face {
   font-family: 'Roboto';
   src: url('./assets/fonts/Roboto-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./assets/fonts/sf-pro-display-bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
