--- a/src/component/ModalButton/modalButton.module.css
+++ b/src/component/ModalButton/modalButton.module.css
@@ -2,7 +2,7 @@
     padding: 4px 24px;
     border-radius: 40px;
     color: #fff;
-    background: #4F372F;
+    background: var(--primaryColour);;
     cursor: pointer;
     height: 48px;
     margin: 0 14px;
