refactor: put body components into a new folder

--- a/src/component/Body/component/ShopContent/ContentModal/contentModal.module.css
+++ b/src/component/Body/component/ShopContent/ContentModal/contentModal.module.css
@@ -27,6 +27,11 @@
     color: #464646;
 }
 
+.container .options {
+    max-width: 150px;
+    overflow: auto;
+}
+
 .container .footer {
     display: flex;
     flex-direction: column;
