--- a/src/component/Modal/modal.module.css
+++ b/src/component/Modal/modal.module.css
@@ -42,5 +42,20 @@
   right: 18px;
   cursor: pointer;
   box-shadow: 0px 2px 2px 0px #0000001F;
+}
 
+
+@media only screen and (max-width: 500px) {
+  .overlay {
+    align-items: self-end;
+  }
+  .overlay .content {
+    max-height: 100%;
+    margin: 0;
+    width: 100%;
+  }
+
+  overlay .content .header .bgImg {
+    height: 265px;
+  }
 }
