--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+
+  --text-color: #464646;
+  --dark-text-color: #121212;
+  --gray-bg: #F8F9FA;
 }
 
 body.no-scroll {
@@ -18,6 +22,13 @@ body.no-scroll {
   font-family: 'Roboto';
   src: url('./assets/fonts/Roboto-Bold.ttf') format('truetype');
   font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  src: url('./assets/fonts/sf-pro-display-regular.woff2') format('woff2');
+  font-weight: 400;
   font-style: normal;
 }
 
