--- a/src/component/Body/component/ShopContent/ContentName/contentName.module.css
+++ b/src/component/Body/component/ShopContent/ContentName/contentName.module.css
@@ -13,7 +13,7 @@
     letter-spacing: 0.5px;
     text-align: left;
     margin: 0;
-    color: #121212;
+    color: var(--dark-text-color);
 }
 
 .nameWrapper .icon {
