--- a/src/component/Body/component/ShopContent/ContentModal/contentModal.module.css
+++ b/src/component/Body/component/ShopContent/ContentModal/contentModal.module.css
@@ -62,10 +62,6 @@
     background: #DADADA;
 }
 
-.container .footer .size .max {
-    background: red;
-}
-
 .container .footer .size .value {
     font-family: SF Pro Display;
     font-size: 24px;
@@ -73,4 +69,12 @@
     line-height: 28.64px;
     text-align: center;
     color: var(--dark-text-color);
+}
+
+@media only screen and (max-width: 500px) {
+    .container .footer {
+        padding: 24px;
+        border-top: 1px solid #dfe0e1;
+        background: #f8f9fa;
+    }
 }
