--- a/src/component/Modal/modal.module.css
+++ b/src/component/Modal/modal.module.css
@@ -24,6 +24,20 @@
   display: flex;
 }
 
+.overlay .content .title {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21.09px;
+  letter-spacing: 0.75px;
+  color: var(--dark-text-color);
+  text-align: center;
+  margin: 0;
+  padding: 24px 0;
+  border-bottom: 1px solid #DADADA;
+  width: 100%;
+}
+
 .overlay .content .header .bgImg {
   background-size: cover;
   background-position: center;
@@ -45,14 +59,16 @@
 }
 
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
   .overlay {
     align-items: self-end;
   }
+
   .overlay .content {
     max-height: 100%;
     margin: 0;
     width: 100%;
+    height: 100%;
   }
 
   .overlay .content .header .bgImg {
