--- a/src/component/Body/component/ShopContent/ContentModal/contentModal.module.css
+++ b/src/component/Body/component/ShopContent/ContentModal/contentModal.module.css
@@ -78,3 +78,9 @@
         background: #f8f9fa;
     }
 }
+
+@media only screen and (max-width: 700px) {
+    .container .options {
+        max-height: 230px;
+    }
+}
